--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
   padding: 0 5rem;
 }
 
+h2 {
+  font-size: 2.3rem;
+  margin-bottom: 1.5rem;
+}
+
+h4 {
+  font-size: 1.1rem;
+}
+
+h5 {
+  font-size: 0.9rem;
+}
+
 .btn {
   position: relative;
   display: inline-block;
@@ -23,7 +36,7 @@
   letter-spacing: 1px;
   font-family: "Josefin Sans", sans-serif;
   cursor: pointer;
-  width: 140px;
+  width: 145px;
   box-shadow: 0 0 5px #00abf0;
   overflow: hidden;
   z-index: 1;
