--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -33,3 +33,11 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 600px) {
+  .navBar {
+    bottom: 2%;
+  }
+}
