--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -63,8 +63,10 @@
       padding-top: 3rem;
     }
 
-    .textContent {
-      font-size: 21px;
+    .content {
+      .textContent {
+        font-size: 20px;
+      }
     }
   }
 }
