--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,12 +1,11 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 1rem 5rem;
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 10;
   background-color: #081b29;
 
   .list {
