--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  padding-top: 5rem;
+  padding: 5rem 5rem 7rem 5rem;
 
   .image {
     filter: drop-shadow(0 0 7px #00abf0);
