--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  padding: 5rem 0 7rem 0;
+  padding: 5rem 5rem 7rem 5rem;
 
   .contactCon {
     display: flex;
@@ -22,6 +22,7 @@
         &:hover {
           background-color: transparent;
           border: 1px solid #013a51;
+          transform: scale(1.05);
         }
 
         .icon {
