--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,12 +1,38 @@
 .home {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
+  height: 100%;
+  width: 100%;
+
+  .mask {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: #081b29;
+      opacity: 0.6;
+    }
+
+    .heroImg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      background-position: center;
+      background-size: cover;
+    }
+  }
 
   .container {
-    width: 300px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    align-items: start;
 
     .me {
       display: flex;
@@ -16,6 +42,9 @@
 
       h1 {
         font-size: 2.5rem;
+        text-transform: uppercase;
+        font-weight: 900;
+        padding: 1.5rem 0;
       }
     }
 
@@ -27,7 +56,7 @@
 
     .iconDiv {
       display: flex;
-      padding: 1rem 0;
+      padding: 1.5rem 0;
       gap: 1rem;
       color: #00abf0;
 
@@ -53,7 +82,7 @@
     .btnCon {
       display: flex;
       align-items: center;
-      padding: 1rem 0;
+      padding: 1.5rem 0;
       gap: 1rem;
     }
   }
