--- a/src/components/skills/Skill.scss
+++ b/src/components/skills/Skill.scss
@@ -33,3 +33,15 @@
     }
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .skills {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .skills {
+    padding: 0 1rem;
+  }
+}
