added project section, and its mobile view

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -14,12 +14,19 @@
 
   .content {
     text-align: left;
+    .paragraphs-container {
+      &::-webkit-scrollbar {
+        width: 12px;
+      }
 
-    .textContent {
-      font-size: 21px;
-      margin-bottom: 1rem;
+      &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+      }
+      .textContent {
+        font-size: 21px;
+        margin-bottom: 1rem;
+      }
     }
-
     .btnCon {
       margin-top: 1.5rem;
     }
