--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -30,6 +30,8 @@
           margin-bottom: 0.5rem;
         }
 
+        h4 
+
         .link {
           margin-top: 10px;
           font-size: 0.8rem;
