--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -62,13 +62,15 @@
       left: -100%;
       z-index: -3;
       transition: 0.7s;
+      background: rgba(1, 58, 81, 0.9);
+
+      .active {
+        left: 0;
+      }
 
       li {
         padding: 0.7rem 0;
-
-        .link {
-          font-size: 1.5rem;
-        }
+        font-size: 1.5rem;
       }
     }
 
