--- a/src/components/skills/Skill.scss
+++ b/src/components/skills/Skill.scss
@@ -20,6 +20,7 @@
         transition: 1s ease-in-out;
         border: 1px solid transparent;
         text-transform: uppercase;
+        font-size: 18px;
 
         &:hover {
           background-color: transparent;
