--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -56,6 +56,8 @@
 
     .iconDiv {
       display: flex;
+      align-items: center;
+      justify-content: center;
       padding: 1.5rem 0;
       gap: 1rem;
       color: #00abf0;
@@ -82,6 +84,7 @@
     .btnCon {
       display: flex;
       align-items: center;
+      justify-content: center;
       padding: 1.5rem 0;
       gap: 1rem;
     }
